# librazerblade

./: .gitignore  BladeStructs.h  CMakeLists.txt  Core.h  DescriptionStorage.cpp  DescriptionStorage.h  Laptop.cpp  Laptop.h  LaptopDescription.h  README.md  Utils.cpp  Utils.h  librazerblade.cpp  librazerblade.h
Packets/: PacketFactory.cpp  PacketFactory.h  PacketUtil.cpp  PacketUtil.h
Usb/: UsbInterface.cpp  UsbInterface.h
libusb/: libusb.h
